# efm32gg-hal

./: Cargo.toml  NEWS.md  README.md
.github/workflows/: ci.yaml  security.yaml
src/: bitband.rs  cmu.rs  gpio.rs  i2c.rs  lib.rs  routing.rs  systick.rs  time_util.rs  timer.rs  watchdog.rs
src/gpio/: common.rs  efm32gg.rs  efm32hg.rs  mod.rs
src/routing/: efm32gg.rs  efm32gg11.rs  efr32xg1.rs  per_function.rs  per_peripheral.rs
