[package]
name = "efm32gg-hal"
version = "0.1.0"
authors = ["chrysn <chrysn@fsfe.org>"]

categories = ["embedded", "no-std"]
description = "HAL for the EFM32GG (EFM32 Giant Gecko) family of microcontrollers"
keywords = ["arm", "cortex-m", "efm32", "efm32gg", "embedded-hal-impl"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/chrysn/efm32gg-hal"
# documentation = "https://docs.rs/efm32gg-hal" # only to be advertised when actually useful

[dependencies]
cortex-m = "0.5.2"

# version is a wild guess. dependency on unproven features should only be
# present if own unproven feature is active (but how do i do that?).
embedded-hal = { version = "0.2.0", features = ["unproven"] }

# for starts it's probably convenient to depend on the biggest available
# svd2rust-generated crate (the chips will let us; FWICT all EFM32GG are the
# same and just have fewer pins wired); having bobbin will hopefully make this
# smoother
efm32gg990 = { git = "https://github.com/maximeborges/svd2rust_efm32gg990" } # should become 0.1.2

[features]
default = ["unproven"]
unproven = []
